--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
-body {
+htmnl, body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: brown;
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
