--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 htmnl, body {
-    background-color: brown;
+    background-color: #4F41B5;
     margin: 0;
     padding: 0;
 }
@@ -11,17 +11,29 @@ htmnl, body {
     margin: 30px auto;
 }
 
-button {
-    font-family: "M PLUS Rounded 1c", sans-serif;
-    font-weight: 800;
-    font-style: normal;
-    color: antiquewhite;
-    background-color: #416db5;
-}
-
 input {
     font-family: "M PLUS Rounded 1c", sans-serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 22px;
     text-align: center;
+    border: 0;
+    padding: 8px;
+    border-radius: 22px;
+    color: #416db5;
+    background-color: #e7e7e8;
+}
+
+button {
+    font-family: "M PLUS Rounded 1c", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 22px;
+    text-align: center;
+    border: 0;
+    padding: 8px;
+    border-radius: 22px;    
+    color: #e7e7e8;
+    background-color: #24336c;
+    margin: 20px 0;
 }
