--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
-htmnl, body {
+body {
+    font-family: "M PLUS Rounded 1c", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 22px;
+    text-align: center;
     background-color: #4F41B5;
+    color: #e7e7e8;;
     margin: 0;
     padding: 0;
 }
@@ -22,6 +28,7 @@ input {
     border-radius: 22px;
     color: #24336c;
     background-color: #e7e7e8;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5)
 }
 
 button {
@@ -30,10 +37,34 @@ button {
     font-style: normal;
     font-size: 22px;
     text-align: center;
-    border: 0;
     padding: 8px;
+    border: 0;
     border-radius: 22px;    
+    margin: 16px 0;
     color: #e7e7e8;
     background-color: #24336c;
-    margin: 20px 0;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5)
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+ul li {
+    font-family: "M PLUS Rounded 1c", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 22px;
+    text-align: center;
+    padding: 8px;
+    border-radius: 22px;    
+    flex-grow: 1;
+    color: #e7e7e8;
+    background-color: #f68629;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
