--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
     color: #e7e7e8;;
     margin: 0;
     padding: 0;
+    user-select: none;
 }
 
 .container {
@@ -46,6 +47,10 @@ button {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5)
 }
 
+button:hover {
+    background-color: #416db5;
+}
+
 ul {
     list-style-type: none;
     padding: 0;
@@ -67,4 +72,9 @@ ul li {
     color: #e7e7e8;
     background-color: #f68629;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+ul li:hover {
+    background-color: #c64927;
+    font-size: 22px;
 }
